# telegram_flea

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_UA.md  Dockerfile  LICENSE.md  Makefile  README.md  SECURITY.md  __init__.py  docker-compose.yml  keyboards.py  main.py  models.py  po_compile.py  pyproject.toml  requirements.txt  settings.py
.github/ISSUE_TEMPLATE/: custom-issue-template-for-telegram-flea.md
filters/: __init__.py  auth.py
locales/de/LC_MESSAGES/: bot.po
locales/en/LC_MESSAGES/: bot.po
locales/hi/LC_MESSAGES/: bot.po
locales/id/LC_MESSAGES/: bot.po
locales/ua/LC_MESSAGES/: bot.po
locales/uk/LC_MESSAGES/: bot.po
middlewares/: __init__.py  message_logging_middleware.py
migrations/bot/: 1_20231019172051_add_Telegram_models.py
utils/: __init__.py  analytics.py  data_validation.py  generalization.py  loguru_logging.py  redis_storage.py  tortoise_orm.py
